--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4"
   },
@@ -47,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "prettier": "^1.19.1"
+    "husky": "^7.0.0",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1"
   }
 }
