--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,35 @@
-name: Build and Deploy to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - main
+      - master  # 这里使用你的默认分支名称，如果不是 main，请替换成你的默认分支名称
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 18
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm install
+        run: npm i
 
-      - name: Build
-        run: npm run build  # Replace with your build command
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build  # Replace with your build output directory
+      - name: Build and deploy
+        run: |
+          npm run build
+          git config --global user.email "272905918@qq.com"
+          git config --global user.name "Deploy BOT"
+          git checkout --orphan gh-pages
+          git rm -rf .
+          mv dist/* .
+          rm -r dist
+          rm -r node_modules
+          git add .
+          git commit -m "Deploy to GitHub Pages"
+          git push -f origin gh-pages
