--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
           git config --global user.name "Deploy BOT"
           git checkout --orphan gh-pages
           git rm -rf .
-          mv dist/* .
-          rm -r dist
+          mv build/* .
+          rm -r build
           rm -r node_modules
           git add .
           git commit -m "Deploy to GitHub Pages"
